2002-05-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.cpp: Set N to 1 for Monostack.

2002-05-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.cpp: Fix field in exit medium.

2002-05-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* interface.cpp: Check if widths match.

2002-05-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* waveguide.h: Add c1_size().
	* bloch.h: Ditto.

2002-05-08  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.cpp: Compare pointers instead of waveguides.

2002-05-07  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* material.cpp: Add eps_mu.

2002-05-07  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* cavity.cpp: Check for presence of gain medium.

2002-05-07  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* expression.cpp: Detect bad expressions.
	* stack.cpp: Ditto.

2002-05-06  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* expression.cpp: Fix Term(Stack).

2002-05-06  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.cpp: Corner case of single waveguide stack.

2002-05-06  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* scatterer.cpp: Find modes even when doing trivial scatterers.

2002-04-30  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* defs.h: Add support for turning off degenerate handling.
	* defs.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.

2002-04-18  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Replace type_list by args.

2002-03-20  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* defs.h: Clean up Fortran name handling.

2002-03-18  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* bloch.h: Increase portability.
	* camfr_wrap.cpp: Ditto.
	* expression.cpp: Ditto.
	* scatterer.h: Ditto.
	* waveguide.h: Ditto.

2002-03-06  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.cpp: Remove unrequired casts.

2002-03-06  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Add support for Section.
	* defs.h: Ditto.
	* defs.cpp: Ditto.
