@@ -1,5 +1,9 @@
 2002-05-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
+	* camfr_wrap.cpp: Improve InfStack wrapping.
+
+2002-05-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
 	* stack.cpp: Set N to 1 for Monostack.
 
 2002-05-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
